--- a/src/components/ChatItem/ChatItem.css
+++ b/src/components/ChatItem/ChatItem.css
@@ -13,8 +13,24 @@
     /* te quedaste en el minuto 40:24 */
 }
 
-.conversation-item {
+/* .conversation-item {
     display: grid;
     grid-template-columns: 40px auto;
     margin: 16px 8px;
+} */
+
+.conversation-item {
+    /* Add your default styles here */
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    background-color: #fff;
+    transition: background-color 0.3s ease;
+    /* Smooth transition effect */
+}
+
+.conversation-item.hovered {
+    /* Styles for hovered card */
+    background-color: rgba(128, 128, 128, 0.2);
+    /* Grey translucent color */
 }
