--- a/src/pages/PostDetailsPage/PostDetailsPage.css
+++ b/src/pages/PostDetailsPage/PostDetailsPage.css
@@ -1,26 +1,56 @@
-/* PostCard.css */
-.post-card {
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    position: relative;
-    width: 200px;
-    height: 300px;
-    margin: 10px;
-    /* Adjust width as needed */
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 120px 20px;
 }
 
-.post-image-container {
+
+
+.postDetails-card {
+    border-radius: 10px;
+    box-shadow: 0 6px 14px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    position: relative;
+    width: 600px;
+    height: 700px;
+    transition: transform 0.3s;
+}
+
+.card-header {
+    display: flex;
+    align-items: center;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+
+.owner-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.owner-details {
+    margin-left: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.postDetails-image-container {
     position: relative;
     height: 60%;
 }
 
-.post-image {
+.postDetails-image {
     width: 100%;
     height: 100%;
-    /* Make image fill the container */
     object-fit: cover;
-    /* Ensure the image covers the area without stretching */
     display: block;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -35,15 +65,12 @@
     justify-content: space-between;
     padding: 10px;
     pointer-events: none;
-    /* Prevents the icons overlay from blocking image clicks */
 }
 
 .message-icon {
     pointer-events: auto;
-    /* Enable clicking on icons */
     background-color: white;
     border-radius: 50%;
-    /* Fully rounded icons */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,17 +82,13 @@
 .message-icon.hidden {
     background-color: transparent;
     pointer-events: none;
-    /* This will prevent the div from being clickable */
     opacity: 0;
-    /* Optionally set the opacity to 0 so it's not visible */
 }
 
 .favourite-icon {
     pointer-events: auto;
-    /* Enable clicking on icons */
     background-color: white;
     border-radius: 50%;
-    /* Fully rounded icons */
     display: flex;
     justify-content: right;
     align-items: right;
@@ -79,14 +102,11 @@
 
 .edit-delete-icons {
     background-color: white;
-    /* This is the circle background */
     border-radius: 8%;
     padding: 5px;
     position: absolute;
     top: 19px;
-    /* Adjust as needed */
     right: 10px;
-    /* Adjust as needed */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,31 +121,27 @@
 .edit-delete-icons.hidden {
     background-color: transparent;
     pointer-events: none;
-    /* This will prevent the div from being clickable */
     opacity: 0;
-    /* Optionally set the opacity to 0 so it's not visible */
 }
 
-.post-image-container:hover .edit-delete-icons:not(.hidden) {
+.postDetails-image-container:hover .edit-delete-icons:not(.hidden) {
     opacity: 1;
 }
 
 .edit-icon,
 .delete-icon {
     margin-bottom: 5px;
-    /* Space between icons */
 }
 
-.post-info {
+.postDetails-info {
     padding: 10px;
-    /* Removed fixed height */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 70%;
+
 }
 
-.post-title {
+.postDetails-title {
     font-size: 1.2em;
     font-weight: bold;
     color: #333;
@@ -134,33 +150,28 @@
     text-overflow: ellipsis;
 }
 
-.post-plantType {
+.postDetails-plantType {
     font-size: 0.8em;
 }
 
 @media (max-width: 992px) {
-    .post-card {
-        width: 150px;
-        /* Smaller width for smaller screens */
-        height: 225px;
-        /* Smaller height for smaller screens */
+    .postDetails-card {
+
+        width: 500px;
+        height: 700px;
     }
 
-    .post-info {
+    .postDetails-info {
         padding: 5px;
-        height: 70%;
-        /* Allocate 40% of the card height to post information */
+
         display: flex;
         flex-direction: column;
-        /* Stack info vertically */
         justify-content: space-between;
-        /* Distribute space between title and plant type */
-        padding-bottom: 0%;
-        margin-bottom: 0px;
+
 
     }
 
-    .post-title {
+    .postDetails-title {
         font-size: 1em;
         font-weight: bold;
         color: #333;
@@ -169,17 +180,15 @@
         text-overflow: ellipsis;
     }
 
-    .post-plantType {
+    .postDetails-plantType {
         font-size: 0.7em;
         margin: 0;
     }
 
     .favourite-icon {
         pointer-events: auto;
-        /* Enable clicking on icons */
         background-color: white;
         border-radius: 50%;
-        /* Fully rounded icons */
         display: flex;
         justify-content: right;
         align-items: right;
@@ -191,10 +200,8 @@
 
     .message-icon {
         pointer-events: auto;
-        /* Enable clicking on icons */
         background-color: white;
         border-radius: 50%;
-        /* Fully rounded icons */
         display: flex;
         justify-content: center;
         align-items: center;
