--- a/src/components/ConversationLog/ConversationLog.css
+++ b/src/components/ConversationLog/ConversationLog.css
@@ -14,3 +14,14 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     max-width: fit-content;
 }
+
+.chat-panel2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 16px;
+    height: calc(100vh - 60px);
+    box-sizing: border-box;
+    overflow-y: auto;
+}
