--- a/src/components/MessageForm/MessageForm.css
+++ b/src/components/MessageForm/MessageForm.css
@@ -1,28 +1,63 @@
 .message-form-grid {
+    display: flex;
     align-items: center;
+    padding: 10px;
+    width: 100%;
 }
 
-.form-control.message-textarea {
-    border-radius: 20px;
-    border: 1px solid #ced4da;
+.input-group {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    padding: 10px 16px;
+}
 
-    width: 500px;
-    padding: 10px 15px;
+.message-input-container {
+    flex-grow: 1;
+}
+
+
+.form-control.message-textarea {
+    border-radius: 15px;
+    border: 1px solid #ced4da;
     font-size: 1rem;
     line-height: 1.5;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-.form-control.message-textarea:focus {
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: inset 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    min-height: 50px;
+    resize: vertical;
+    width: 80vh;
 }
 
 .send-button {
-    padding-left: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.message-form-button button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.message-form-button button:hover {
+    background-color: #218838;
+}
+
+.message-form-button button:disabled {
+    background-color: #94d3a2;
+    cursor: not-allowed;
+}
+
+@media (max-width: 910px) {
+    .form-control.message-textarea {
+        width: 80vh;
+    }
 }
