--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,14 +1,9 @@
 .navbar {
     position: fixed !important;
-    /* Add this line */
     top: 0;
-    /* Add this line */
     left: 0;
-    /* Add this line */
     right: 0;
-    /* Add this line */
     z-index: 10;
-    /* Make sure this z-index is lower than the dropdown z-index */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,95 +25,63 @@
     padding: 0 10px;
 }
 
-
 .navbar-items svg {
     margin-left: 10px;
-    /* Space between icons */
     cursor: pointer;
 }
-
 
 .dropdown-menu {
     position: absolute;
     top: 100%;
-    /* Adjust as needed */
     left: 0;
     z-index: 1000;
     display: flex;
     flex-direction: column;
-    /* Other styles for the dropdown */
 }
 
 .navbar .dropdown {
     display: none;
-    /* Hide the dropdown by default */
     position: absolute;
-    /* Position it below the navbar item */
     background-color: white;
-    /* Background color */
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    /* Some shadow for visibility */
     z-index: 1;
-    /* Ensure it's on top of other elements */
 }
 
 .navbar .navbar-item:hover .dropdown {
     display: block;
-    /* Show the dropdown on hover */
 }
 
 .form-control.search-input {
 
     flex-grow: 1;
-    /* Allow the input to grow */
     width: 650px;
 
-    /* Make it take the full width of its container */
 
     border-radius: 50px;
-    /* Rounded borders */
     padding: 10px 20px;
-    /* Comfortable padding */
 }
 
-/* Style for the 'Upload Plant' button to make it green */
 .nav-link.upload-plant-button {
     background-color: #25bc41;
-    /* Green background */
     color: white;
-    /* White text */
     padding: 12px 12px;
-    /* Padding to make it look like a button */
     border: none;
-    /* No border */
     border-radius: 50px;
-    /* Rounded borders */
     text-decoration: none;
-    /* No underlines on the text */
     display: inline-block;
-    /* Allows padding and width adjustments */
     margin: 4px 2px;
-    /* Some space around the button */
     cursor: pointer;
-    /* Pointer cursor on hover */
 }
 
 .nav-link.upload-plant-button:hover {
     background-color: #45a049;
-    /* Slightly darker green on hover */
 }
-
-
-
-
 
 .navbar-items {
     display: flex;
     justify-content: right;
     align-items: center;
 }
-
-
 
 .topRightItems {
     display: flex;
@@ -127,13 +90,39 @@
 
 }
 
-@media (max-width: 999px) {
-    .navbar .some-class-for-links-to-hide {
-        display: none;
+@media (max-width: 1300px) {
+    .topRightItems {
+        flex-direction: column;
+    }
+
+    .location {
+        order: 1;
+        width: 100%;
+    }
+
+    .navbar-items {
+        flex-wrap: nowrap;
+        width: 100%;
+        justify-content: flex-end;
+    }
+
+    .form-control.search-input {
+        width: auto;
+        margin-bottom: 10px;
+    }
+
+    .navbar-items svg {
+        margin-left: 5px;
     }
 }
 
-/* Show the footer-navbar when the window width is less than 1000px */
+@media (max-width: 999px) {
+    .navbar .hideLinks {
+        display: none;
+    }
+
+}
+
 @media (max-width: 999px) {
     .footer-navbar {
         display: flex;
