--- a/src/pages/PostDetailsPage/PostDetailsPage.css
+++ b/src/pages/PostDetailsPage/PostDetailsPage.css
@@ -25,8 +25,8 @@
 
 .avatar {
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 60px !important;
+    height: 60px !important;
     margin-right: 10px;
 }
 
@@ -154,6 +154,7 @@
 .postDetails-plantType {
     font-size: 0.8em;
 }
+
 
 @media (max-width: 992px) {
     .postDetails-card {
