--- a/src/components/UserBadges/UserBadges.css
+++ b/src/components/UserBadges/UserBadges.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    padding: 20px;
+    padding: 70px 20px;
 }
 
 .user-badges h1 {
