--- a/src/components/ChatItem/ChatItem.css
+++ b/src/components/ChatItem/ChatItem.css
@@ -29,8 +29,6 @@
     gap: 10px;
 }
 
-
-
 .conversation-item.hovered {
     background-color: rgba(128, 128, 128, 0.2);
 }
@@ -41,10 +39,24 @@
     border-radius: 4px;
     margin: 5px 0;
     display: inline-block;
+    color: white;
 }
 
 .conversation-item.disabled {
-    pointer-events: none;
-    opacity: 0.5;
-    background-color: #f0f0f0;
+    opacity: 0.8;
+    background-color: rgba(128, 128, 128, 0.2)
+}
+
+.closed-chip {
+    background-color: #25bc41;
+    padding: 5px;
+    border-radius: 4px;
+    margin: 5px 0;
+    display: inline-block;
+    color: white;
+}
+
+.conversation-item.closed {
+    opacity: 0.8;
+    background-color: rgba(128, 128, 128, 0.2) !important;
 }
