--- a/src/components/Inbox/Inbox.css
+++ b/src/components/Inbox/Inbox.css
@@ -1,9 +1,10 @@
     .inbox-container {
+        padding-top: 12px;
         display: flex;
     }
 
     .sidebar {
-        width: 20%;
+        width: 40%;
         border-right: 1px solid #ccc;
         padding: 16px;
     }
