--- a/src/components/ExchangeCard/ExchangeCard.css
+++ b/src/components/ExchangeCard/ExchangeCard.css
@@ -1,5 +1,181 @@
-.ExchangeCard img {
-    height: 160px;
-    object-fit: cover;
+/* .exchange-card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    position: relative;
+    width: 320px !important;
+    height: 450px !important;
+    margin: 10px;
+}
 
+.exchange-image-container {
+    position: relative;
+    height: 40%;
+}
+
+.exchange-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+
+
+.exchange-info {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+}
+
+.exchange-title {
+    font-size: 1em;
+    font-weight: bold;
+    color: #333;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.exchange-plantType {
+    font-size: 0.8em;
+
+}
+
+.exchange-button {
+    background-color: #198754;
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    border-radius: 50px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+@media (max-width: 992px) {
+    .exchange-card {
+        width: 150px !important;
+        height: 225px !important;
+    }
+
+    .exchange-info {
+        padding: 5px;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-bottom: 0%;
+        margin-bottom: 0px;
+
+    }
+
+    .exchange-title {
+        font-size: 1em;
+        font-weight: bold;
+        color: #333;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .exchange-plantType {
+        font-size: 0.7em;
+        margin: 0;
+    }
+} */
+
+.exchange-card {
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+    position: relative;
+    width: 320px !important;
+    height: 450px !important;
+    margin: 10px;
+}
+
+.exchange-image-container {
+    position: relative;
+    height: 40%;
+}
+
+.exchange-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+
+
+.exchange-info {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+}
+
+.exchange-title {
+    font-size: 1em;
+    font-weight: bold;
+    color: #333;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.exchange-plantType {
+    font-size: 0.8em;
+
+}
+
+.exchange-button {
+    background-color: #198754;
+    color: white;
+    padding: 10px 10px;
+    border: none;
+    border-radius: 50px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+@media (max-width: 992px) {
+    .exchange-card {
+        width: 150px !important;
+        height: 225px !important;
+    }
+
+    .exchange-info {
+        padding: 5px;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-bottom: 0%;
+        margin-bottom: 0px;
+
+    }
+
+    .exchange-title {
+        font-size: 1em;
+        font-weight: bold;
+        color: #333;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .exchange-plantType {
+        font-size: 0.7em;
+        margin: 0;
+    }
 }
