--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@ body {
   font-weight: 100;
   color: #333333;
 }
+
+.confetti {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1100;
+}
